maybe fixed the loading img on mobile?

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ ul { margin: 0; }
   width: 100%; 
   height: 100%; 
   top: 0; left: 0; right: 0; bottom: 0;
-  background: url('../images/robotic-arms.gif') center center no-repeat #12ADE6; 
+  background: url('../images/robotic-arms.gif') center center no-repeat #12ADE6;
+  background-size: 60% 80%;  
   z-index: 10000;
 }
 .back {
@@ -291,6 +292,15 @@ footer .row { height: 100%; }
 	.navbar-nav > li, .navbar-nav li a {
 		height: 50px;
 	}
+	.se-pre-con {
+	  position: fixed; 
+	  width: 100%; 
+	  height: 100%; 
+	  top: 0; left: 0; right: 0; bottom: 0;
+	  background: url('../images/robotic-arms.gif') center center no-repeat #12ADE6;
+	  background-size: 800px;  
+	  z-index: 10000;
+	}
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -308,6 +318,15 @@ footer .row { height: 100%; }
 	.navbar-nav > li, .navbar-nav li a {
 		min-height: 50px;
 		height: 50px;
+	}
+	.se-pre-con {
+	  position: fixed; 
+	  width: 100%; 
+	  height: 100%; 
+	  top: 0; left: 0; right: 0; bottom: 0;
+	  background: url('../images/robotic-arms.gif') center center no-repeat #12ADE6;
+	  background-size: 992px;  
+  	z-index: 10000;
 	}
 }
 /******************
@@ -332,6 +351,15 @@ footer .row { height: 100%; }
 		min-height: 100px;
 		height: 100px;
 	}
+	.se-pre-con {
+	  position: fixed; 
+	  width: 100%; 
+	  height: 100%; 
+	  top: 0; left: 0; right: 0; bottom: 0;
+	  background: url('../images/robotic-arms.gif') center center no-repeat #12ADE6;
+	  background-size: 768px;  
+	  z-index: 10000;
+	}
 }
 
 @media only screen and (max-width: 767px) and (min-width: 481px) {
@@ -354,6 +382,15 @@ footer .row { height: 100%; }
 	.navbar-nav > li, .navbar-nav li a {
 		min-height: 50px;
 		height: 50px;
+	}
+	.se-pre-con {
+	  position: fixed; 
+	  width: 100%; 
+	  height: 100%; 
+	  top: 0; left: 0; right: 0; bottom: 0;
+	  background: url('../images/robotic-arms.gif') center center no-repeat #12ADE6;
+	  background-size: 767px;  
+	  z-index: 10000;
 	}
 }
 
@@ -381,6 +418,15 @@ footer .row { height: 100%; }
 	.navbar-nav > li, .navbar-nav li a {
 		min-height: 50px;
 		height: 50px;
+	}
+	.se-pre-con {
+	  position: fixed; 
+	  width: 100%; 
+	  height: 100%; 
+	  top: 0; left: 0; right: 0; bottom: 0;
+	  background: url('../images/robotic-arms.gif') center center no-repeat #12ADE6;
+	  background-size: 480px;  
+	  z-index: 10000;
 	}
 }
 
